--- a/package.json
+++ b/package.json
@@ -3,16 +3,20 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-
+  "main": "src/main.js",
   "scripts": {
-    "dev": "concurrently \"npm:dev:backend\" \"npm:dev:frontend\"",
+    "start": "npm run dev",
+    "dev": "concurrently \"npm:dev:backend\" \"npm:dev:frontend\" \"npm run start-electron\"",
     "dev:frontend": "vite",
     "dev:backend": "node src/backend/index.js",
     "build": "vue-tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "start-electron": "electron src/main.js"
   },
   "dependencies": {
     "cors": "^2.8.5",
+    "electron": "^28.1.0",
+    "electron-builder": "^24.9.1",
     "express": "^4.17.1",
     "playwright": "^1.19.0",
     "vue": "^3.3.8"
