--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "start-electron": "electron src/main.js"
   },
   "dependencies": {
+    "async-retry": "^1.3.3",
     "cors": "^2.8.5",
     "electron": "^28.1.0",
     "electron-builder": "^24.9.1",
