Trying to fix issue with vue type for ts.config

--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "npm run dev",
     "dev": "concurrently \"npm:dev:backend\" \"npm:dev:frontend\" \"npm run start-electron\"",
     "dev:frontend": "vite",
-    "dev:backend": "tsc && node src/backend/server.js",
+    "dev:backend": "tsc && (node src/backend/proxyServer.js && node src/backend/server.js|| error)",
+    "proxy-server": "nodemon src/backend/proxy-server.js",
     "build": "vue-tsc && vite build",
     "preview": "vite preview",
     "start-electron": "electron src/main.js"
@@ -26,6 +27,7 @@
   "devDependencies": {
     "@types/async-retry": "^1.4.8",
     "@vitejs/plugin-vue": "^4.5.0",
+    "@vue/tsconfig": "^0.5.1",
     "concurrently": "^8.2.2",
     "typescript": "^5.2.2",
     "vite": "^5.0.0",
