--- a/package.json
+++ b/package.json
@@ -7,12 +7,13 @@
   "scripts": {
     "start": "npm run dev",
     "dev": "concurrently \"npm:dev:backend\" \"npm:dev:frontend\" \"npm run start-electron\"",
-    "dev:frontend": "vite",
-    "dev:backend": " (tsc && node src/backend/proxyServer.js && node src/backend/server.js|| error)",
+    "dev2": "(npm run dev:backend && npm run dev:frontend && npm run start-electron || error)",
+    "dev:frontend": "(vite || error)",
+    "dev:backend": "(tsc && node src/backend/proxyServer.js && node src/backend/server.js || error)",
     "proxy-server": "nodemon src/backend/proxyServer.js",
     "build": "vue-tsc && vite build",
     "preview": "vite preview",
-    "start-electron": "electron src/main.js"
+    "start-electron": "(electron src/main.js || error)"
   },
   "dependencies": {
     "async-retry": "^1.3.3",
